DB ye infobox kaydediyor. Ad bilgisi tamam

--- a/README
+++ b/README
@@ -11,3 +11,8 @@ DB deki aşağıdaki alanlar ayrıştırılacak:
 5-ölüm_yeri      =
 6-diğer_adları   =
 7-meslek         =
+
+
+Dene doğum yeri için:
+
+Isaac Hayes
