templateler çıkartıldı 1 algo. yazıldı

--- a/README
+++ b/README
@@ -16,3 +16,18 @@ DB deki aşağıdaki alanlar ayrıştırılacak:
 Dene doğum yeri için:
 
 Isaac Hayes
+
+01.05.2013
+
+Templateleri çıkartıyorum.    Doğum yeri örnekleri: TemplateOrnekDoğumYeri.docx
+  Sorunlar:
+
+ Metin içinde geçmiyor bazıları?
+ (http://tr.wikipedia.org/wiki/Bruce_Cohen)
+ (http://tr.wikipedia.org/wiki/Carlos_S%C3%A1nchez_Moreno)
+
+Yanlış yazılanlar var. Bunlar başarımı dşrecektir?
+(Ahmet Çakar (d. 1962, Çankırı, Türkiye)sonuç-->(İstanbul))
+
+Örnekler ve Templateler çıkartıldı.
+
