algolar tamam teste devam 13.05.2013

--- a/README
+++ b/README
@@ -17,7 +17,7 @@ Dene doğum yeri için:
 
 Isaac Hayes
 
-01.05.2013
+02.05.2013
 
 Templateleri çıkartıyorum.    Doğum yeri örnekleri: TemplateOrnekDoğumYeri.docx
   Sorunlar:
@@ -30,4 +30,16 @@ Yanlış yazılanlar var. Bunlar başarımı dşrecektir?
 (Ahmet Çakar (d. 1962, Çankırı, Türkiye)sonuç-->(İstanbul))
 
 Örnekler ve Templateler çıkartıldı.
+1. temğlate implement edildi.
+
+13.05.2013
+
+Diğer templateler implement ediliyor.
+
+Infoboxdan çıkarım yapılırken lke bilgisinide al.
+
+Karşılaştırma yap. İçinde geçen herhangi bir şey bulduysan başarıdır.
+
+
+
 
